<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/mav"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">
                <TextView
                    android:id="@+id/warning_titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:textColor="@color/Toolbar"
                    android:text="@string/pop_up_try_again_title"/>
                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/Toolbar"
                    android:id="@+id/message_textxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:text="@string/pop_up_try_again_text"/>
                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/Toolbar"
                    android:id="@+id/warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/pop_up_warning"/>
                <LinearLayout
                    android:id="@+id/flags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp"
                    android:weightSum="3"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btn_save"
                        android:text="@string/okay"
                        android:layout_width="80dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/capsul" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>