<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settingss"
    android:background="@drawable/border">
    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/globe"
            android:layout_centerInParent="true">
        </ImageView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_medya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ses"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="40dp"
                android:fontFamily="serif"
                android:text="@string/sound_text"
                android:textColor="@color/view"
                android:textSize="20sp"></TextView>
            <Switch
                android:id="@+id/soundSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="80dp">
            </Switch>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/main1"
            android:layout_below="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/titresim"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="40dp"
                android:fontFamily="serif"
                android:text="@string/vibrate_text"
                android:textColor="@color/view"
                android:textSize="20sp"></TextView>
            <Switch
                android:id="@+id/vibrateSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="80dp">
            </Switch>
        </RelativeLayout>
        <LinearLayout
            android:layout_below="@+id/main1"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <CheckBox
                android:id="@+id/turkish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:textColor="@color/view"
                android:textSize="20sp"
                android:layout_marginLeft="70dp"
                android:layout_alignParentTop="true"
                android:text="@string/turkish" />
            <CheckBox android:id="@+id/english"
                android:layout_marginLeft="20dp"
                android:fontFamily="serif"
                android:textColor="@color/view"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/sound"
                android:text="@string/english" />
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/ic_keyboard_backspace_black_24dp">
    </Button>
</RelativeLayout>