<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainmenu"
    android:background="@drawable/border">
    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/globe"
            android:layout_centerInParent="true">
        </ImageView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_border"
            android:fontFamily="serif"
            android:text="@string/game_mode1"
            android:textSize="13sp"
            android:textColor="@color/beyaz"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/bayrak_ulke"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/start"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_border"
            android:fontFamily="serif"
            android:text="@string/game_mode2"
            android:textSize="13sp"
            android:textColor="@color/beyaz"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/baskent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/bayrak_ulke"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_border"
            android:fontFamily="serif"
            android:text="@string/game_mode3"
            android:textSize="13sp"
            android:textColor="@color/beyaz"
            android:textAllCaps="false"/>
    </RelativeLayout>

    <TextView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="V.1.1.0"
        android:textColor="@color/beyaz"
        android:textSize="15sp"/>
    <Button
        android:id="@+id/btn_sound"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_settings_black_24dp">

    </Button>
</RelativeLayout>